[package]
name = "lune-std-datetime"
version = "0.1.3"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - DateTime"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { git = "https://github.com/Slingshot-Engine-LLC/mlua.git", branch = "server", features = ["luau"] }

thiserror = "1.0"
chrono = "0.4.38"
chrono_lc = "0.1.6"

lune-utils = { version = "0.1.3", path = "../lune-utils" }
