[package]
name = "lune-std-fs"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - FS"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { git = "https://github.com/Slingshot-Engine-LLC/mlua.git", branch = "server", features = ["luau"] }

bstr = "1.9"

tokio = { version = "1", default-features = false, features = ["fs"] }

lune-utils = { version = "0.1.3", path = "../lune-utils" }
lune-std-datetime = { version = "0.1.2", path = "../lune-std-datetime" }
