[package]
name = "lune-std-luau"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Luau"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { git = "https://github.com/Slingshot-Engine-LLC/mlua.git", branch = "server", features = ["luau", "luau-jit"] }

lune-utils = { version = "0.1.3", path = "../lune-utils" }
